ozkan-aws-devops/devops/hands-on/ansible/ansible-04-provisioning-a-web-and-db-server-with-dynamic-website/red-hat-ec2-cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  
Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair

Resources:
  ControllerNodeSecGrp:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Red Hat Enterprise Linux 8 SSH  #required
      GroupName: ansible-controller-node-2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  TargetNode1SecGrp:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Red Hat Enterprise Linux 8 SSH MYSQL/Aurora #required
      GroupName: ansible-target-node-1
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0

  TargetNode2SecGrp:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Red Hat Enterprise Linux 8 SSH HTTP  #required
      GroupName: ansible--target-node-2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ControllerNode:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-096fda3c22c1c990a
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref ControllerNodeSecGrp
      UserData:
        Fn::Base64: 
          !Sub |
            #! /bin/bash
            yum update -y

  TargetNode1:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-096fda3c22c1c990a
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref TargetNode1SecGrp  
      UserData:
        Fn::Base64: 
          !Sub |
            #! /bin/bash
            yum update -y

  TargetNode2:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-096fda3c22c1c990a
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref TargetNode2SecGrp  
      UserData:
        Fn::Base64: 
          !Sub |
            #! /bin/bash
            yum update -y
